working on child cluster

--- a/app/components/common/dashboard/dashboard.html
+++ b/app/components/common/dashboard/dashboard.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-6">
             <div class="hpanel">
-                <div class="panel-body">
+                <div class="panel-body" style="height: 78px;">
                     <div id="hbreadcrumb" class="pull-right m-t-lg">
                         <ol class="hbreadcrumb">
                             <li ng-if="nav.location_path && (nav.location.key !== nav.community.key)"><a ui-sref="{{'community.dashboard({community: nav.location})'}}">
@@ -28,7 +28,7 @@
         </div>
         <div class="col-md-6">
             <div class="hpanel">
-                <div class="panel-body" style="padding: 10px 5px; min-height: 78px;">
+                <div class="panel-body" style="padding: 10px 5px; height: 78px;">
                     <div class="col-xs-8">
                         <div class="pull-left">
                             <h2 class="font-light m-b-xs">Leaders</h2>
