switched to @value and added delete

--- a/app/components/common/nav/nav.add_cluster.html
+++ b/app/components/common/nav/nav.add_cluster.html
@@ -1,7 +1,7 @@
 <div class="inmodal">
     <div class="color-line"></div>
     <div class="modal-header">
-        <h4 class="modal-title">Add a Cluster in {{add.community.profile.name}}</h4>
+        <h4 class="modal-title">Add a Cluster in {{add.location.profile.name}}</h4>
         <p class="font-bold">A cluster is an entrepreneurial ecosystem in support of a specific industry. Clusters are made up of mentors, investors, companies, accelerators, coworking spaces, and events that connect people within the community and foster the creation of new business.</p>
     </div>
     <div class="modal-body">
