industries missing in db

--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -159,7 +159,7 @@
                     Clusters
 
                 </span>
-                    <div ng-if="settings.user.communities.indexOf(nav.location_path) > -1 && nav.communities[nav.location_path].type == 'location'" class="pe-7s-close fa-rotate-45 pull-right" ng-click="nav.addCluster()" tooltip-placement="left" tooltip="Add Cluster" style="opacity: .6; cursor: pointer; margin-top: 5px;"></div>
+                    <div ng-if="nav.user.communities.indexOf(nav.location_path) > -1 && nav.communities[nav.location_path].type == 'location'" class="pe-7s-close fa-rotate-45 pull-right" ng-click="nav.addCluster()" tooltip-placement="left" tooltip="Add Cluster" style="opacity: .6; cursor: pointer; margin-top: 5px;"></div>
                 </a>
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.clusters">
