--- a/app/components/common/dashboard/dashboard.html
+++ b/app/components/common/dashboard/dashboard.html
@@ -10,11 +10,11 @@
                     <div id="hbreadcrumb" class="pull-right">
                         <ol class="hbreadcrumb">
                             <li ng-if="nav.location_path && (nav.location.key !== nav.community.key)"><a ui-sref="{{'community.dashboard({community: nav.location})'}}">
-                                <span ng-if="nav.location.profile.name">&nbsp;&nbsp;{{ nav.location.profile.name }}&nbsp;&nbsp;/</span></a>
+                                <span ng-if="nav.location.profile.name">{{ nav.location.profile.name }}&nbsp;&nbsp;/</span></a>
                             </li>
                             <li ng-repeat="state in $state.$current.path" ng-class="{active: $last}">
                                 <a ng-if="state.params.pageTitle.config.value && !(!!state.abstract) && !$last" href="#{{state.url.format($stateParams)}}">&nbsp;&nbsp;{{state.params.pageTitle.config.value}}&nbsp;&nbsp;/</a>
-                                <span ng-if="$last">&nbsp;&nbsp;{{ nav.community.type[0].toUpperCase() + nav.community.type.slice(1) }}</span>
+                                <span ng-if="$last">&nbsp;{{ nav.community.type[0].toUpperCase() + nav.community.type.slice(1) }}</span>
                             </li>
                         </ol>
                     </div>
