--- a/app/components/companies/company.list.item.html
+++ b/app/components/companies/company.list.item.html
@@ -7,8 +7,8 @@
         <a ui-sref="company.dashboard({profile: item.value, location_path: item.path.key, location: nav.community })" title="View {{::item.value.profile.name | words:0}}'s Profile" style="float: left; "><strong>{{::item.value.profile.name}} </strong></a>
         <a ng-show="{{(item.value.profile.summary).length > 0}}" title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary">&nbsp;&nbsp;<i class="fa fa-chevron-down fa-fw"></i>
         </a>
-        <li ng-repeat="val in item.value.communities" class="role-right">
-            <a ng-if="nav.communities[val].type == 'network'" href="{{'/' + val}}" class="btn btn-xs btn-outline btn-success"><i class="fa {{nav.communities[val].profile.icon}}"></i> {{nav.communities[val].profile.name}}</a>
+        <li ng-repeat="val in item.value.profile.parents" class="role-right">
+            <a ui-sref="search.dashboard({location_path: nav.location.key, community: nav.location, query: val})" class="btn btn-xs btn-outline btn-defai;t">{{val}}</a>
         </li>
         <br>
         <div class="dash-row">
