--- a/app/components/users/user.invite.html
+++ b/app/components/users/user.invite.html
@@ -2,7 +2,7 @@
     <div class="color-line"></div>
     <div class="modal-header">
         <h4 class="modal-title">Invite people to join {{invite.community.profile.name}}</h4>
-        <p class="font-bold">If you invite someone who is already in the system, they will be added to your {{invite.community.type}} immediately. Otherwise we will send them an invitation by email.</p>
+        <p class="font-bold">If you invite someone who is already in the system, they will be added to your {{invite.community.type}} immediately without being notified. Otherwise we will send them an invitation by email.</p>
     </div>
     <div class="modal-body">
         <div class="hpanel">
