--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -109,7 +109,7 @@
                                 <a><i class="fa fa-caret-right"></i>Companies
                                 <span loading-bars ng-show="comp_working"></span>
                                 </a>
-                                <li ng-if="(nav.community.type == 'network' && nav.user.roles.leader[nav.community.key].indexOf(nav.location_path) > -1) || (nav.community.type == 'location' && nav.user.communities.indexOf(nav.location_path) > -1)" class="nav-third-level" ui-sref="{{'company.add' + nav.nav_url}}">
+                                <li ng-if="(nav.community.type == 'network' && nav.user.roles.leader[nav.community.key].indexOf(nav.location_path) > -1) || (nav.community.type == 'location' && nav.user.communities.indexOf(nav.location_path) > -1)" class="nav-third-level" ng-click="nav.addCompany();">
                                     <a style="color: #aaa;">+&nbsp;&nbsp;Add Company</a>
                                 </li>
                             </li>
