--- a/app/components/common/welcome/welcome.companies.html
+++ b/app/components/common/welcome/welcome.companies.html
@@ -60,5 +60,5 @@
     <div alert-box this-alert="welcome.alert"></div>
     <h4 style="margin-bottom: 13px;">
         <a class="btn btn-info pull-left" ui-sref="welcome.skills">Back</a>
-        <a class="btn btn-info pull-right" ng-click="welcome.submit()">Finish</a></h4>
+        <a class="btn btn-info pull-right" ng-click="welcome.next()">Continue</a></h4>
 </div>
