--- a/app/less/various.less
+++ b/app/less/various.less
@@ -26,7 +26,7 @@
 
 .hero .content {
   padding: 0 30px;
-  max-width: 50ex;
+  max-width: 89%;
   font-size: 34px;
   z-index: 10;
   position: relative;
