--- a/app/components/users/user.dashboard.html
+++ b/app/components/users/user.dashboard.html
@@ -1,6 +1,6 @@
-<div class="hpanel hgreen">
+<div class="hpanel hgreen" style="margin-bottom: 10px;">
     <div class="panel-body hero" style="padding: 10px 0;">
-        <div class="container">
+        <div class="container" style="padding: 20px 15px;">
             <header class="heading content" style="color:#fff">
                 <img class="img-circle m-b" style="height:100px;" ng-src="{{profile.user.profile.linkedin.pictureUrl || profile.user.profile.avatar || 'images/blank_avatar.png'}}" alt="{{::profile.user.profile.name}}">
                 <h1>
@@ -10,80 +10,73 @@
                     My name is <span class="name">{{::profile.user.profile.name | words:0}} {{::profile.user.profile.name |
                     words:1}} {{::profile.user.profile.name | words:2}}</span>, <span ng-bind-html="::profile.user.profile.linkedin.summary | sentence | linky:'_blank'"></span>
                 </h3>
-                <a href="#" class="btn btn-success btn-sm">Learn more</a>
+                <a href="#ask" class="btn btn-success btn-sm">Ask me a question</a>
             </header>
         </div>
         <span><div id="cover-photo" class="active" style="background-image: url(https://s3-us-west-1.amazonaws.com/wiselike/uploads/background/cropped/upload_167c2ba1ec29e54c46b52b64ff0b16e1.jpg);"></div><span class="cover-overlay"></span></span>
     </div>
 </div>
+<div class="hpanel">
+    <div class="panel-body content-tab-wrapper">
+
+        <!-- BEGIN Nav tabs -->
+        <ul class="nav nav-tabs" role="tablist">
+            <li class="active"><a href="#ask" aria-controls="ask" role="tab" data-toggle="tab" aria-expanded="false"><span class="pe-7s-micro"></span>Ask a Question</a></li>
+            <li><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab" aria-expanded="false"><span class="pe-7s-note2"></span>View Full Profile</a></li>
+        </ul>
+        <!--/ END Nav tabs -->
 
 
-<div class="content-tab-wrapper">
+        <!-- BEGIN Tab panes -->
+        <div class="tab-content">
 
-    <!-- BEGIN Nav tabs -->
-    <ul class="nav nav-tabs" role="tablist">
-        <li><a href="#ask" aria-controls="ask" role="tab" data-toggle="tab" aria-expanded="false"><span class="pe-7s-micro"></span>Ask a Question</a></li>
-        <li><a href="#leader" aria-controls="leader" role="tab" data-toggle="tab" aria-expanded="false"><span class="pe-7s-flag"></span>Leader</a></li>
-        <li><a href="#founder" aria-controls="founder" role="tab" data-toggle="tab" aria-expanded="false"><span class="pe-7s-paper-plane"></span>Founder</a></li>
-        <li><a href="#investor" aria-controls="investor" role="tab" data-toggle="tab" aria-expanded="false"><span class="pe-7s-gleam"></span>Investor</a></li>
-        <li class="active"><a href="#mentor" aria-controls="mentor" role="tab" data-toggle="tab" aria-expanded="true"><span class="pe-7s-study"></span>Mentor</a></li>
-        <li><a href="#team" aria-controls="team" role="tab" data-toggle="tab" aria-expanded="true"><span class="pe-7s-ball"></span>Team Member</a></li>
-        <li><a href="#provider" aria-controls="provider" role="tab" data-toggle="tab" aria-expanded="true"><span class="pe-7s-portfolio"></span>Service Provider</a></li>
-    </ul>
-    <!--/ END Nav tabs -->
+            <div role="tabpanel" class="tab-pane fade bg-light" id="first">
 
-
-    <!-- BEGIN Tab panes -->
-    <div class="tab-content">
-
-
-
-        <div role="tabpanel" class="tab-pane fade bg-light" id="first">
-
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h2><span class="text-success">UI components </span>for your app</h2>
-                            <p>Lorem Ipsum available, but the majority have suffered alteration euismod. </p>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <h2><span class="text-success">UI components </span>for your app</h2>
+                                <p>Lorem Ipsum available, but the majority have suffered alteration euismod. </p>
+                            </div>
                         </div>
+
                     </div>
+            </div> <!-- First Tab Pane -->
 
-                </div>
-        </div> <!-- First Tab Pane -->
+            <div role="tabpanel" class="tab-pane fade" id="second">
+                <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
 
-        <div role="tabpanel" class="tab-pane fade" id="second">
-            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
 
-            <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                <a href="#0" class="more">Read More</a>
+            </div> <!-- Second Tab Pane -->
 
-            <a href="#0" class="more">Read More</a>
-        </div> <!-- Second Tab Pane -->
+            <div role="tabpanel" class="tab-pane fade" id="third">
+                <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
 
-        <div role="tabpanel" class="tab-pane fade" id="third">
-            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
 
-            <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                <a href="#0" class="more">Read More</a>
+            </div> <!-- Third Tab Pane -->
 
-            <a href="#0" class="more">Read More</a>
-        </div> <!-- Third Tab Pane -->
+            <div role="tabpanel" class="tab-pane fade" id="fourth">
+                <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
 
-        <div role="tabpanel" class="tab-pane fade" id="fourth">
-            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
 
-            <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                <a href="#0" class="more">Read More</a>
+            </div> <!-- Fourth Tab Pane -->
 
-            <a href="#0" class="more">Read More</a>
-        </div> <!-- Fourth Tab Pane -->
+            <div role="tabpanel" class="tab-pane fade active in" id="fifth">
+                <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
 
-        <div role="tabpanel" class="tab-pane fade active in" id="fifth">
-            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
 
-            <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                <a href="#0" class="more">Read More</a>
+            </div> <!-- Fifth Tab Pane -->
 
-            <a href="#0" class="more">Read More</a>
-        </div> <!-- Fifth Tab Pane -->
+        </div>
+        <!--/ END Tab panes -->
 
     </div>
-    <!--/ END Tab panes -->
-
 </div>
